--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
