--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "mapbox-gl": "^2.12.1",
+    "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
