--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "mapbox-gl": "^2.12.1",
+    "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
