--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "mapbox-gl": "^2.12.1",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
