--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.12.1",
     "material-ui-popup-state": "^5.0.4",
     "moment": "^2.29.4",
@@ -31,7 +32,9 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-input-emoji": "^5.0.0",
     "react-leaflet": "^4.2.0",
+    "react-moment": "^1.1.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
@@ -42,6 +45,7 @@
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.2",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
