--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.2",
