--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.1",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
@@ -29,11 +30,11 @@
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-input-emoji": "^5.0.0",
-    "react-leaflet": "^4.2.0",
     "react-moment": "^1.1.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
